[metadata]
name = tussik.zpl
description = Tussik ZPL Writer
version = 0.1.0rc1
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = zpl, zpl2, tussik
author = Darren Martz
author_email = darren@tussik.com
url = https://github.com/tussikcom/tussik-zpl
project_urls =
    Issue Tracker = https://github.com/tussikcom/tussik-zpl/issues
    Documentation = https://github.com/tussikcom/tussik-zpl
    home-page = https://github.com/tussikcom/tussik-zpl


classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers
    Environment :: Web Environment
    Topic :: Internet
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[wheel]
universal = 1

[options]
packages = find_namespace:
package_dir=
    =src
zip_safe = True
python_requires = >=3.9
include_package_data = True
install_requires =
    requests
    importlib-metadata; python_version<"3.8"

[options.packages.find]
where=src

[options.extras_require]
images = Pillow >= 3.9

[options.package_data]
examples = examples/*
* = README.md
